--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,10 @@
 
 @layer components{
   .input{
-    @apply border border-slate-600 py-2 px-4 rounded-md block w-full text-sm mt-2
+    @apply border border-slate-600 py-2 px-4 rounded-md block w-full text-sm mt-2 text-14
   }
   .button{
-    @apply bg-indigo-500 py-2 px-4 text-white w-full rounded-md
+    @apply bg-indigo-500 py-2 px-4 text-white w-full rounded-md text-14
   }
   .flex-center{
     @apply flex items-center
